Fix JWT secret issue in login controller

--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
 connectionString=mongodb+srv://chandhinim:RecipeApp@cluster0.t5glh.mongodb.net/recipeapp?retryWrites=true&w=majority&appName=Cluster0
-
-jwtToken=superKeyRecipe
+JWT_SECRET=superKeyRecipe
